final commit added inline comments and internal documentation

--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
+ 
+<!-- Author: Ryan Sterling 300509648-->
+<!-- Source File Name: Comp 392 Assignment 03 -->
+<!-- Last Modified By: Ryan Sterling 300509648-->
+<!-- Date Last Modified By: April 17,2016 -->
+<!-- Program Description: Jumping Justice-->
+<!-- Revision History: https://github.com/ryans3/Comp392Assignment03 -->
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="utf-8">
-    <title>Final Project</title>
+    <title>Assignment 03-Jumping Justice</title>
     <!-- CSS Section -->
     <link rel="stylesheet" href="Content/app.css">
 </head>
